# ao-sol

./: .gitignore  .readthedocs.yaml  License.md  README.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: ci.yml  python-package.yml
docs/: Instalacao.md  Templates.md
docs/exemplos/: Analise_UPAC.ipynb  Analise_UPAC_com_bateria.ipynb  Dados_Consumo.ipynb  Procura_UPAC.ipynb  Producao_PVGIS.ipynb
docs/exemplos/consumo/historico/: 2022_01.xlsx
docs/sphinx/source/: conf.py  index.md
docs/sphinx/source/api/: index.md
docs/sphinx/source/exemplos/: analise_upac.nblink  analise_upac_com_bateria.nblink  dados_consumo.nblink  index.md  (+2 more)
src/aosol/analise/: analise_bomba_calor.py  analise_energia.py  analise_financeira.py  analise_precos_energia.py  indicadores_autoconsumo.py  indicadores_bomba_calor.py  indicadores_financeiros.py
src/aosol/armazenamento/: bateria.py  bomba_calor_aqs.py  perfil_extraccao.csv  perfil_extraccao.py
src/aosol/series/: consumo.py  newa.py  producao.py  pvgis.py
src/testes/: 01_2021.xlsx  analise_energia_test.py  analise_financeira_test.py  bateria_test.py  bomba_calor_comportamento.ipynb  bomba_calor_test.py  consumo_test.py  mesoscale-ts.nc  newa_test.py  preco_energia_test.py  producao_test.py  pvgis_test.py  teste_perfis_eredes.csv
templates/: Analise UPAC com bateria.ipynb  Analise UPAC.ipynb
templates/consumo/perfis_eredes/: E-REDES_Perfil_Consumo_2023.csv
testes/: analise_financeira_test.py  bateria_test.py  consumo_test.py  preco_energia_test.py  producao_test.py  teste_leitura_faturas.tsv
(+1 files in other folders)
